--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
 
         <!-- Header -->
         <header class="bg-dark text-light shadow-sm pt-3 pb-2">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-8">
                 <h3 id="Gentoolink Web Services" style="color: orange;">Gentoolink Web Services</h3>
-                    <p class="text-light">Last updated: Sun 16 October 2022</p>
+                    
             </div>
             <div class="col-4 small" style="margin-top: 0.5rem;">
                     <div class="text-right mb-2 small" style="height: 26px">
@@ -194,11 +194,11 @@
 
         <!-- Main -->
         <main class="py-3">
-                <div class="container">
+                <div class="container-fluid bg-light">
                     <!-- Sharing -->
 
                     <!-- Content -->
-    <div class="container-fluid text-sm-center p-5 bg-white" style="max-width: 100%;>
+    <div class="container-fluid text-lg-center p-5 bg-white" style="max-width: 100%;>
   <h1 class="display-4">Website Developement & Hosting</h1>
   <p class="lead">Do you need a website? Do you need to get your business startup off the ground with an online presence? </p>
   <hr class="my-4">
